Use pre-wrap to fix copy and paste of code

--- a/source/stylesheets/custom_appium.css
+++ b/source/stylesheets/custom_appium.css
@@ -20,7 +20,7 @@
 /* enable multi line code blocks that stay in the center column */
 .content code {
   display: inline-block;
-  white-space: pre-line; /* line wrap */
+  white-space: pre-wrap; /* line wrap */
   /* transparent background color means text is invisible when
      multi-line code extends into left column.
      required if white-space is pre instead of pre-line
